[gd_scene load_steps=34 format=3 uid="uid://bgj5tmuvn154g"]

[ext_resource type="Texture2D" uid="uid://bg18dqbcpkq65" path="res://art/bomb-empty.png" id="1_aafb6"]
[ext_resource type="Script" uid="uid://dkvr74rycwe8d" path="res://code/scripts/bomb_1.gd" id="1_j7fs1"]
[ext_resource type="Texture2D" uid="uid://dqjh2sxcpmg8e" path="res://art/timer.png" id="3_yd4hi"]
[ext_resource type="Texture2D" uid="uid://dxmq0ufr4flm5" path="res://art/zagadka bomba 1/gala.png" id="4_lyovj"]
[ext_resource type="Texture2D" uid="uid://sf5g0vl5spk3" path="res://art/zagadka bomba 1/bomba1-led-sie-swieci.png" id="5_5keuk"]
[ext_resource type="Texture2D" uid="uid://xar2isndu8fd" path="res://art/zagadka bomba 1/bomba1-kabel-timer-good.png" id="6_5keuk"]
[ext_resource type="Texture2D" uid="uid://cxdid42rr5cdk" path="res://art/zagadka bomba 1/bomba1-kabel-timer-broken.png" id="6_ie5hl"]
[ext_resource type="Texture2D" uid="uid://bdic2ffjbof0x" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-1-good.png" id="7_b6016"]
[ext_resource type="Texture2D" uid="uid://bcb0klgbv72v8" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-2-good.png" id="7_o6lrr"]
[ext_resource type="Texture2D" uid="uid://drpor6qlw12ie" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-1-broken.png" id="8_ie5hl"]
[ext_resource type="Texture2D" uid="uid://bn2lye1qbfoth" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-2-broken.png" id="8_p4tam"]
[ext_resource type="Texture2D" uid="uid://dtlxenss56qw5" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-3-good.png" id="11_de5ln"]
[ext_resource type="Texture2D" uid="uid://fwdeixlva8ou" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-3-broken.png" id="12_teqsd"]
[ext_resource type="Texture2D" uid="uid://fpnmqfy47kdc" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-4-good.png" id="13_f55v8"]
[ext_resource type="Texture2D" uid="uid://d6imgchlcngo" path="res://art/zagadka bomba 1/bomba1-kabel-zagadka-4-broken.png" id="14_n8pen"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lyovj"]
atlas = ExtResource("3_yd4hi")
region = Rect2(0, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5keuk"]
atlas = ExtResource("3_yd4hi")
region = Rect2(22, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4al80"]
atlas = ExtResource("3_yd4hi")
region = Rect2(44, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6lrr"]
atlas = ExtResource("3_yd4hi")
region = Rect2(66, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4tam"]
atlas = ExtResource("3_yd4hi")
region = Rect2(88, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a43u"]
atlas = ExtResource("3_yd4hi")
region = Rect2(110, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l6lm"]
atlas = ExtResource("3_yd4hi")
region = Rect2(132, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d3vj"]
atlas = ExtResource("3_yd4hi")
region = Rect2(154, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pju7i"]
atlas = ExtResource("3_yd4hi")
region = Rect2(176, 0, 22, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6016"]
atlas = ExtResource("3_yd4hi")
region = Rect2(198, 0, 22, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_ie5hl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyovj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5keuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4al80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6lrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4tam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a43u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l6lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d3vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pju7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6016")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o6lrr"]
radius = 28.0

[sub_resource type="SpriteFrames" id="SpriteFrames_de5ln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_5keuk")
}, {
"duration": 1.0,
"texture": ExtResource("6_ie5hl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4al80"]
radius = 31.0

[sub_resource type="SpriteFrames" id="SpriteFrames_3a43u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_b6016")
}, {
"duration": 1.0,
"texture": ExtResource("8_ie5hl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ytkfl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_o6lrr")
}, {
"duration": 1.0,
"texture": ExtResource("8_p4tam")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nfo83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_de5ln")
}, {
"duration": 1.0,
"texture": ExtResource("12_teqsd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mejf4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_f55v8")
}, {
"duration": 1.0,
"texture": ExtResource("14_n8pen")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bomb1" type="Node2D"]
script = ExtResource("1_j7fs1")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_aafb6")
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 240.0

[node name="SecUnits" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -95)
sprite_frames = SubResource("SpriteFrames_ie5hl")
metadata/_edit_group_ = true

[node name="SecTens" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -95)
sprite_frames = SubResource("SpriteFrames_ie5hl")
metadata/_edit_group_ = true

[node name="MinUnits" type="AnimatedSprite2D" parent="."]
position = Vector2(-39, -95)
sprite_frames = SubResource("SpriteFrames_ie5hl")
metadata/_edit_group_ = true

[node name="MinTens" type="AnimatedSprite2D" parent="."]
position = Vector2(-60, -95)
sprite_frames = SubResource("SpriteFrames_ie5hl")
metadata/_edit_group_ = true

[node name="BoomButton" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoomButton"]
position = Vector2(71, 49)
shape = SubResource("CircleShape2D_o6lrr")

[node name="LEDGlow" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="LEDGlow"]
texture = ExtResource("5_5keuk")

[node name="CableTimer1" type="Area2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="CableTimer1"]
sprite_frames = SubResource("SpriteFrames_de5ln")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CableTimer1"]
polygon = PackedVector2Array(-124, -101, -115, -101, -100, -95, -91, -95, -80, -99, -80, -94, -91, -90, -101, -90, -116, -97, -125, -97)

[node name="Puzzle1" type="Area2D" parent="."]

[node name="Rotor" type="Area2D" parent="Puzzle1"]

[node name="Sprite" type="Sprite2D" parent="Puzzle1/Rotor"]
position = Vector2(-61, 82)
texture = ExtResource("4_lyovj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puzzle1/Rotor"]
position = Vector2(-61, 83)
shape = SubResource("CircleShape2D_4al80")

[node name="Cable1" type="Area2D" parent="Puzzle1"]

[node name="Sprite" type="AnimatedSprite2D" parent="Puzzle1/Cable1"]
sprite_frames = SubResource("SpriteFrames_3a43u")
frame_progress = 0.944689

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle1/Cable1"]
polygon = PackedVector2Array(-97, 22, -87, 20, -67, 20, -29, 24, -26, 23, -23, 24, -23, 28, -39, 28, -68, 25, -87, 25, -97, 26)

[node name="Cable2" type="Area2D" parent="Puzzle1"]

[node name="Sprite" type="AnimatedSprite2D" parent="Puzzle1/Cable2"]
sprite_frames = SubResource("SpriteFrames_ytkfl")
frame_progress = 0.34939

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle1/Cable2"]
position = Vector2(-1, -14)
polygon = PackedVector2Array(-97, 23, -93, 21, -82, 21, -70, 25, -46, 25, -25, 22, -25, 27, -46, 30, -70, 29, -84, 26, -92, 25, -96, 27)

[node name="Cable3" type="Area2D" parent="Puzzle1"]

[node name="Sprite" type="AnimatedSprite2D" parent="Puzzle1/Cable3"]
sprite_frames = SubResource("SpriteFrames_nfo83")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle1/Cable3"]
position = Vector2(-1, -14)
polygon = PackedVector2Array(-96, 8, -90, 5, -79, 3, -62, 11, -40, 12, -24, 6, -20, 9, -33, 16, -48, 19, -63, 16, -80, 10, -89, 11, -94, 13)

[node name="Cable4" type="Area2D" parent="Puzzle1"]

[node name="Sprite" type="AnimatedSprite2D" parent="Puzzle1/Cable4"]
sprite_frames = SubResource("SpriteFrames_mejf4")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Puzzle1/Cable4"]
position = Vector2(-1, -14)
polygon = PackedVector2Array(-97, -8, -87, -14, -78, -13, -70, -6, -50, -5, -33, -8, -20, -8, -21, -4, -33, -3, -50, 1, -66, 1, -76, -3, -80, -8, -88, -7, -93, -3)
